--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "printWidth": 80
+  "singleQuote": true,
+  "printWidth": 80,
+  "semi": false,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
