--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
+    "vue-loading-overlay": "^6.0.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.53.0",
@@ -26,6 +29,7 @@
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.5",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
