--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,15 @@
   "printWidth": 80,
   "semi": false,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "vueMaxAttributesPerLine": {
+    "singleline": {
+      "max": 1,
+      "allowFirstLine": false
+    },
+    "multiline": {
+      "max": 1,
+      "allowFirstLine": false
+    }
+  }
 }
