--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --fix",
+    "lint": "eslint --ext .ts,.vue src",
     "format": "prettier --write src"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
@@ -19,17 +19,20 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
     "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5",
-    "vite-plugin-vue-setup-extend": "^0.4.0"
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vue-tsc": "^1.8.5"
   }
 }
