--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
     "vue-loading-overlay": "^6.0.2",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-google-map": "^0.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
