--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "qrcode.vue": "^3.4.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
     "vue-loading-overlay": "^6.0.2",
