--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-i18n": "^9.6.5",
     "vue-loading-overlay": "^6.0.2",
     "vue-router": "^4.2.5",
-    "vue3-google-map": "^0.18.0"
+    "vue3-google-map": "^0.18.0",
+    "vue3-slide-up-down": "^2.0.1"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
